testing file import,  sklearn issue

--- a/numpy_practice.ipynb
+++ b/numpy_practice.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "dont forget to source the environment\n",
     "\n",
-    "source <venv>/bin/activate"
+    " source .venv/bin/activate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,9 +126,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "a.transpose(*axes)\n",
+      "\n",
+      "Returns a view of the array with axes transposed.\n",
+      "\n",
+      "Refer to `numpy.transpose` for full documentation.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "axes : None, tuple of ints, or `n` ints\n",
+      "\n",
+      " * None or no argument: reverses the order of the axes.\n",
+      "\n",
+      " * tuple of ints: `i` in the `j`-th place in the tuple means that the\n",
+      "   array's `i`-th axis becomes the transposed array's `j`-th axis.\n",
+      "\n",
+      " * `n` ints: same as an n-tuple of the same ints (this form is\n",
+      "   intended simply as a \"convenience\" alternative to the tuple form).\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "p : ndarray\n",
+      "    View of the array with its axes suitably permuted.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "transpose : Equivalent function.\n",
+      "ndarray.T : Array property returning the array transposed.\n",
+      "ndarray.reshape : Give a new shape to an array without changing its data.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> import numpy as np\n",
+      ">>> a = np.array([[1, 2], [3, 4]])\n",
+      ">>> a\n",
+      "array([[1, 2],\n",
+      "       [3, 4]])\n",
+      ">>> a.transpose()\n",
+      "array([[1, 3],\n",
+      "       [2, 4]])\n",
+      ">>> a.transpose((1, 0))\n",
+      "array([[1, 3],\n",
+      "       [2, 4]])\n",
+      ">>> a.transpose(1, 0)\n",
+      "array([[1, 3],\n",
+      "       [2, 4]])\n",
+      "\n",
+      ">>> a = np.array([1, 2, 3, 4])\n",
+      ">>> a\n",
+      "array([1, 2, 3, 4])\n",
+      ">>> a.transpose()\n",
+      "array([1, 2, 3, 4])\n",
+      "\u001b[0;31mType:\u001b[0m      builtin_function_or_method"
+     ]
+    }
+   ],
    "source": [
     "# note that you can get a help as follows just by running this cell:\n",
     "?a.transpose\n",
@@ -145,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +313,7 @@
        "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +334,7 @@
        "array([ 3, 33])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +376,7 @@
        "       [44, 55, 66]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +397,7 @@
        "array([11, 33, 55, 77, 99])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +446,7 @@
        "       [False, False,  True]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +467,7 @@
        "array([1, 2, 2, 1])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +497,7 @@
        "array([33, 66, 99])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +520,7 @@
        "array([33, 66, 99])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +550,7 @@
        "array([ 1,  2,  6, 33, 44])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,11 +561,197 @@
     "print('\\nselected elements with indices 0,1,5 from first, 2,3 from second rows:')\n",
     "D[[0,0,0,1,1],[0,1,5,2,3]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "element0in Z is: [1 2 3]\n",
+      "element1in Z is: [4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iteration directly over np.array\n",
+    "\n",
+    "Z = np.array([[1,2,3],[4,5,6]])\n",
+    "for elind,elval in enumerate(Z):\n",
+    "    print(f\"element{elind}in Z is: {elval}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Short answer is: iterating over multidimensional array is not a good idea, and apperantly indexing is not like Matlab. So be careful. Yet, note that in numpy you will not need for loops over arrays most of the time. Continue to understand why..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3) array full of zeros:\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "\n",
+      "(3, 3) array full of ones:\n",
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "\n",
+      "(2, 4) array full of 15s:\n",
+      " [[15 15 15 15]\n",
+      " [15 15 15 15]]\n",
+      "\n",
+      "(2, 4) array full of 15s:\n",
+      " [[15. 15. 15. 15.]\n",
+      " [15. 15. 15. 15.]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "shape1= (2,3)\n",
+    "shape2= (3,3)\n",
+    "shape3= (2,4)\n",
+    "full_value =15\n",
+    "\n",
+    "print(f\"{shape1} array full of zeros:\\n{np.zeros(shape1)}\\n\")\n",
+    "print(f\"{shape2} array full of ones:\\n{np.ones(shape2)}\\n\")\n",
+    "print(f\"{shape3} array full of {full_value}s:\\n {np.full(shape3,15)}\\n\")\n",
+    "# an alternative way for full function\n",
+    "print(f\"{shape3} array full of {full_value}s:\\n {np.ones(shape3)*full_value}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.33708721241127293\n",
+      "[[0.73684006 0.90709181 0.79586784 0.24526153 0.36103334]\n",
+      " [0.52290421 0.59834503 0.49279389 0.19661453 0.46379371]\n",
+      " [0.89529231 0.24152515 0.62924052 0.33950391 0.3922216 ]]\n",
+      "[[7 6 9]\n",
+      " [6 2 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random valued array\n",
+    "print(np.random.rand())\n",
+    "print(np.random.rand(3,5))\n",
+    "print(np.random.randint(10,size=(2,3)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MatPrint(M,message = 'Matrix:'):\n",
+    "    '''\n",
+    "    this function accepts a variable M, expected to be in the form of np.array\n",
+    "    and prints it more like a matrix\n",
+    "    Potential future work:\n",
+    "        digit size is currently fixed to 8, therefore it will not show arrays with long numbers properly\n",
+    "    '''\n",
+    "    try:\n",
+    "        if M.ndim != 2: # this function is meant to print only 2D arrays, if not 2D just print it\n",
+    "            print(message)\n",
+    "            print(M)\n",
+    "        else:\n",
+    "            print(message)\n",
+    "            spc = ' '\n",
+    "            sep = '|'\n",
+    "            for r in M: # go over each row, i.e. 1 and 2 :)\n",
+    "                res = sep + spc\n",
+    "                for d in r: # go over each element in the current row\n",
+    "                    res = res+ '{:8.2f}'.format(d) + spc\n",
+    "                res = res + sep\n",
+    "                print(res)\n",
+    "    except:\n",
+    "        print(f\"Is {M} really a meaningful numpy array?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this function can be improved\n",
+    "\n",
+    "download following file the current folder \n",
+    "Next import function of interest from the downloaded function.\n",
+    "to test run a docstring (the help document)\n",
+    "\n",
+    "Note that you can read the content of the donwloaded files. Check out the files icon at the bottom on the left side.\n",
+    "\n",
+    "Just double click on the file you want to view and also edit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2024-10-05 22:34:37--  https://raw.githubusercontent.com/bugrakoku/bug_python_utils/main/bug_numpy_utils.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 18456 (18K) [text/plain]\n",
+      "Saving to: ‘bug_numpy_utils.py’\n",
+      "\n",
+      "bug_numpy_utils.py  100%[===================>]  18.02K  --.-KB/s    in 0.007s  \n",
+      "\n",
+      "2024-10-05 22:34:38 (2.53 MB/s) - ‘bug_numpy_utils.py’ saved [18456/18456]\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrm bug_numpy_utils.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwget https://raw.githubusercontent.com/bugrakoku/bug_python_utils/main/bug_numpy_utils.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbug_numpy_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MatPrint,CData \u001b[38;5;66;03m# note that once these files are downloaded you can read their content.\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# print function's help after import\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(MatPrint\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__doc__\u001b[39m)\n",
+      "File \u001b[0;32m~/MECH536/bug_numpy_utils.py:35\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinalg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m orth\n\u001b[0;32m---> 35\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m normalize\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexpress\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpx\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph_objects\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgo\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
+   "source": [
+    "!rm bug_numpy_utils.py\n",
+    "!wget https://raw.githubusercontent.com/bugrakoku/bug_python_utils/main/bug_numpy_utils.py\n",
+    "from bug_numpy_utils import MatPrint,CData # note that once these files are downloaded you can read their content.\n",
+    "# print function's help after import\n",
+    "\n",
+    "print(MatPrint.__doc__)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
