--- a/Algebra_Review.ipynb
+++ b/Algebra_Review.ipynb
@@ -83,7 +83,124 @@
    "metadata": {},
    "source": [
     "**Scalar Multiplication**\n",
-    "1. $\\alpha v \\in \\Nu$ for all $\\alpha \\in F$ and $v \\in \\Nu$"
+    "1. $\\alpha v \\in \\nu$ for all $\\alpha \\in F$ and $v \\in \\nu$\n",
+    "2. $(\\alpha \\beta)v = \\alpha (\\beta v)$ for all $\\alpha,\\beta \\in F$ and $v \\in \\nu$ (Compatibility)\n",
+    "3. $\\alpha(v+w)=\\alpha v + \\alpha w$ for all $\\alpha \\in F$ and $v,w \\in V$\n",
+    "4. $(\\alpha + \\beta)v =\\alpha v + \\beta v$ for all $\\alpha, \\beta \\in F$ and $v \\in V$ ( Distributivity)\n",
+    "5. 1v =v for all $v \\in V$ (Identitiy Element)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vector Spaces - Applications\n",
+    "* the Fourier transform is widely used in many areas of engineering and science\n",
+    "* We can analyze a signal in the time domain or in the frequency domain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](<images/Screenshot from 2024-10-10 17-21-29.png>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vector Spaces - Example\n",
+    "* When we define the Fourier transform, we need to also define when the transform is well-defined\n",
+    "    * The fourier transofrm is defined on a vector space\n",
+    "\n",
+    "    $L^{1}(R)= {f: R-> C: \\int_{-\\infty}^{\\infty}|f(x)|dx <\\infty}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What kind of functions have a Fourier series\n",
+    "    * Periodic functions\n",
+    "        * Let us say $2\\pi$ periodic functions\n",
+    "        * We can have Fourier series of functions that belongs to the vector space\n",
+    "\n",
+    "$L^{2}(-\\pi,\\pi) = {f:(-\\pi,\\pi)-> C: \\int_{-\\pi}^{\\pi}|f(x)|^{2}dx <\\infty}$\n",
+    "\n",
+    ">If the function does not belong to this space, then the Fourier coefficients may not be well-defined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basis\n",
+    "\n",
+    "* Every vector space has a basis\n",
+    "* Every vector in a vector space can be written in a unique way as a finite linear combination of the lements in this basis\n",
+    "* (#) of elements in a basis is dimension of vector space\n",
+    "\n",
+    "![alt text](<images/Screenshot from 2024-10-12 19-28-58.png>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vector Spaces - Example\n",
+    "* All of us know a very well-known vector space: $R^{n}$\n",
+    "\n",
+    "For $x=(x_{1},x_{2},...x_{n})\\in R^{n}$,  we know that the lenght of vector x\n",
+    "\n",
+    "$||x|| = (\\sum_{k=1}^{n}|x_{k}|^{2})^{1/2}$ \n",
+    "\n",
+    "* For general vector spaces, we need a concept that corresponds to length in $R^{n}$\n",
+    "* We use \"norm\" instead of \"length\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Norm\n",
+    "\n",
+    "A norm for a real or complex vector space $\\nu$ is a function\n",
+    "$||.||:\\nu->R$\n",
+    "\n",
+    "with three properties:\n",
+    "\n",
+    "1. $||x||\\ge 0 $ for all $x \\in V$ and $||x||= 0 <-> x= 0$\n",
+    "2. $||\\alpha x|| = |\\alpha| ||x||$ for all scalars and $\\alpha$ and for all $x \\in \\nu$\n",
+    "3. $||x+y|| \\le||x||+||y||$ for all $x,y \\in \\nu$\n",
+    "\n",
+    ">This concept is defined by mimicking what we know about $R^{n}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Euclidean Vector Norm\n",
+    "\n",
+    "For a vector $x \\in R^{n}$ the euclidean norm is defined by:\n",
+    "\n",
+    "$||x||=(x_{1}^{2}+x_{2}^{2}+...x_{n}^{2})$\n",
+    "\n",
+    "![alt text](<images/Screenshot from 2024-10-12 19-43-07.png>)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### p-Norms\n",
+    "\n",
+    "For $p \\ge 1$, the p-norm of a vector $x \\in R^{n} $ is defined by:\n",
+    "\n",
+    "$||x||_{p}=(|x_{1}|^{p}+|x_{2}|^{p}+...+|x_{n}|^{p})^{1/p}$\n",
+    "\n",
+    "![alt text](<images/Screenshot from 2024-10-12 19-47-28.png>)"
    ]
   }
  ],
