--- a/W4_2738938.ipynb
+++ b/W4_2738938.ipynb
@@ -29,30 +29,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Full name:"
+    "## Full name: Çağdaş Güven"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Student ID"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Definition:\n",
-    "You are to complete following functions. Details are explained in the docstring of each funciton.  \n",
-    "\n",
-    "In the text cell before each function, in brief but sufficient detail, explain how the function calculates the desired outputs.\n",
-    "\n",
-    "Note that these functions complement each other, you can test one with the other if they are properly written.  \n",
-    "\n",
-    "Also note that, there is no limit for the dimension of ambient space.  \n",
-    "\n",
-    "For the time being, there is no noise in data, i.e. rank from a particular subspace directly indicate the dimension of that subspace.  \n"
+    "## Student ID 2738938"
    ]
   },
   {
@@ -61,35 +45,100 @@
    "source": [
     "### Generation of subspaces with desired guaranteed minimal or maximal angles\n",
     "\n",
-    "Replace the content of this cell where you briefly but sufficiently explain how you make sure that your code works using mathematical terms as much as possible.  \n",
+    "1. **Type and value validation**: The function first checks that the input parameters are of the correct types (integer, float) and have valid values ( positive, within the range of the ambient space).\n",
     "\n",
-    "Note that you can write math type expression between $ $.  Recall numpy tutorial on ODTU Class.  \n",
+    "2. **Geometric possibility check**: The function checks if it's geometrically possible to generate the two subspaces given the provided parameters. If the sum of the subspace dimensions is greater than the ambient space dimension and the minimum angle is greater than 0, the function returns two empty matrices.\n",
     "\n",
-    "Anyway here are some examples just in case:  \n",
-    "$e = Mc^2$   \n",
+    "3. **Generate basis for first subspace**: The function generates a random basis `B1` for the first subspace `S1` and then orthonormalizes it using QR decomposition. \n",
     "\n",
-    "$\\int sin(t) dt = -cos(t)$   \n",
     "\n",
-    "$\\begin{bmatrix} 1 & 3 \\\\ 2 & 4 \\end{bmatrix} \\mathbf{x} = \\begin{bmatrix} 4 \\\\ 6 \\end{bmatrix}$\n",
+    "An example for A Matrix using QR decomposition\n",
+    "$$ \n",
+    "A = \\begin{bmatrix} 1 & 2 \\\\\n",
+    "                    3 & 4 \\\\\n",
+    "                    5 & 6\n",
+    "    \\end{bmatrix}\n",
+    "$$\n",
     "\n",
-    "$\\tilde{x} = 0.999 x$"
+    "$A = QR $\n",
+    "\n",
+    "Q will be 3X2 matrix with orthonormal colums.\n",
+    "\n",
+    "R will be 2x2 upper triangular matrix.\n",
+    "\n",
+    "Using the Gram-Schmidt Process our vectors will be \n",
+    "\n",
+    "$$ \n",
+    "a_1 = \\begin{bmatrix}   1  \\\\\n",
+    "                        3  \\\\\n",
+    "                        5 \n",
+    "        \\end{bmatrix}\n",
+    "\n",
+    "a_2 = \\begin{bmatrix}    2 \\\\\n",
+    "                         4 \\\\\n",
+    "                         6\n",
+    "        \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "calculating $q_1 = a_1||a_1||$ with $l_2$ norm\n",
+    "\n",
+    "$||a_1|| = \\sqrt{1^2 + 3^2 + 5^2}= \\sqrt{35}$ so $q_1 = \\frac{1}{||a_1||} a_1 $\n",
+    "\n",
+    "then we project $a_2$ onto $q_1 = (a_2 . q_1)q_1$ and substract this from $a_2$ to make $q_2$ orthogonal to $q_1$\n",
+    "\n",
+    "$$\n",
+    "a_2 . q_1 = \\begin{bmatrix}  2 & 4 & 6\n",
+    "                \\end{bmatrix}\n",
+    "\n",
+    "                .\n",
+    "                \\begin{bmatrix} \\frac{1}{\\sqrt{35}} \\\\\n",
+    "                                \\frac{3}{\\sqrt{35}} \\\\\n",
+    "                                \\frac{5}{\\sqrt{35}} \n",
+    "                \\end{bmatrix}\n",
+    "\n",
+    "                = \\frac{2}{\\sqrt{35}} + \\frac{12}{\\sqrt{35}} + \\frac{30}{\\sqrt{35}} = \\frac{44}{\\sqrt{35}}    \n",
+    "$$\n",
+    "then \n",
+    "$ q_2 = a_2 - (\\frac{4}{\\sqrt{35}} q_1) $\n",
+    "\n",
+    "After normalizing $q_2$, we get the columns of Q\n",
+    "\n",
+    "then R matrix is calculated using the dot products of A's columns with the columns of Q, which gives us an upper triangular matrix.\n",
+    "\n",
+    "4. **Generate basis for second subspace**: The function generates a random basis `B2` for the second subspace `S2` and then orthonormalizes it. However, it needs to ensure that the minimum angle between the two subspaces is at least the provided `minimalAngle`. To do this, it performs a loop with a maximum of 1000 attempts, generating a new `B2` and checking the minimal angle until a valid one is found or the maximum attempts are exceeded.\n",
+    "\n",
+    "5. **Generate random coefficients**: The function generates random coefficient matrices `C1` and `C2` for the data points in each subspace.\n",
+    "\n",
+    "6. **Generate data matrices**: The function computes the data matrices `M1` and `M2` by multiplying the basis matrices `B1` and `B2` with the corresponding coefficient matrices `C1` and `C2`.\n",
+    "\n",
+    "7. **Error handling**: The function includes a try-except block to handle any exceptions that may occur during the execution of the code.\n",
+    "\n",
+    "The function returns the two data matrices `M1` and `M2` if the generation was successful, or two empty numpy arrays if any errors occurred or the input parameters were invalid.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So for GenerateSubspacesMin I have requested Claude of its support \n",
+    "\n",
+    "I have used comment block as first input \n",
+    "\n",
+    "then I got some crude code which correctly generated data for me\n",
+    "\n",
+    "added logic checks and uploaded again\n",
+    "\n",
+    "Asked it to remove np.linalg.svd calculations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 382,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
+    "\n",
     "def GenerateSubspacesMin(D=5, dS1=2, dS2=2, nS1=50, nS2=50, minimalAngle=0):\n",
     "    '''\n",
     "    This function generates 2 data matrices in subspaces S1 and S2 respectively that live in D dimensional ambient space\n",
@@ -138,10 +187,10 @@
     "                Q2, R2 = np.linalg.qr(B2)\n",
     "                B2 = Q2[:, :dS2]\n",
     "                \n",
-    "                # Check principal angles between subspaces\n",
-    "                U1, S, V1 = np.linalg.svd(B1.T @ B2, full_matrices=False)\n",
-    "                angles = np.arccos(np.clip(S, -1.0, 1.0))\n",
-    "                min_angle = np.min(angles)\n",
+    "                # Compute the minimal angle between subspaces\n",
+    "                # using the maximum absolute inner product of basis vectors\n",
+    "                max_inner_product = np.max(np.abs(B1.T @ B2))\n",
+    "                min_angle = np.arccos(max_inner_product)\n",
     "                \n",
     "                if min_angle >= minimalAngle:\n",
     "                    success = True\n",
@@ -166,7 +215,9 @@
     "        return M1, M2\n",
     "        \n",
     "    except Exception:\n",
-    "        return np.array([]), np.array([])"
+    "        return np.array([]), np.array([])\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -174,12 +225,67 @@
    "metadata": {},
    "source": [
     "### Finding minimal and maximal angles between subspaces  \n",
-    "Similar to the case above, replace the content of this cell to explain briefly but sufficiently how you make sure that your code works using mathematical terms as much as possible.  \n"
+    "\n",
+    "1. The function takes two input matrices, `M1` and `M2`, which represent data matrices containing data points that span subspaces `S1` and `S2`, respectively.\n",
+    "\n",
+    "2. The function calculates and returns the minimal angle between the subspaces `S1` and `S2`. The minimal angle is defined as the smallest principal angle between the subspaces spanned by the columns of `M1` and `M2`.\n",
+    "\n",
+    "3. The function first performs input validation to ensure that the input matrices are valid:\n",
+    "   - Checks if `M1` and `M2` are numpy arrays\n",
+    "   - Checks if the input matrices are empty\n",
+    "   - Checks if the matrices have the same number of rows (i.e., the same ambient dimension)\n",
+    "   - Checks if the matrices contain only numeric values (no NaN or Inf)\n",
+    "\n",
+    "4. If any of the input validation checks fail, the function returns `-1000` to indicate an error.\n",
+    "\n",
+    "5. If the input is valid, the function proceeds to find the linearly independent columns of `M1` and `M2` using Gaussian elimination. This is done by iterating through the columns of each matrix and keeping only the columns that are not all-zero or all-equal.\n",
+    "\n",
+    "6. The function then computes the minimal angle between the subspaces `S1` and `S2` by finding the maximum absolute inner product of the basis vectors of the two subspaces. The minimal angle is calculated as the arccos of this maximum absolute inner product.\n",
+    "\n",
+    "7. Finally, the function returns the minimal angle in radians.\n",
+    "\n",
+    "In summary, this function calculates the minimal angle between two subspaces represented by the input data matrices `M1` and `M2`. It first performs input validation, then finds the linearly independent basis vectors of the subspaces, and finally computes the minimal angle using the maximum absolute inner product of the basis vectors.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this time it was tricky after completing similar methods I got a function that utilizes svd decomposition\n",
+    "\n",
+    "after changing np.linalg.svd to np linalg.matrix_rank I have noticed it is still utilizing svd calculations\n",
+    "\n",
+    "so there is a flag for Hermitian. But with that modification max from 50x50 matrix for nSi returns angle value close to 0 \n",
+    "\n",
+    "From what I understand from that pool of data created from 'max_inner_product = np.max(np.abs(Q1.T @ Q2))\n",
+    "'\n",
+    "of 2 subspaces there would always vectors closely related to each other \n",
+    "\n",
+    "I have tested eliminating top %20 data and only getting average value for testing but np.linalg.matrix_rank( , hermitian=True) would always find insensible value. \n",
+    "\n",
+    "so I just uploaded the code and asked for it to calculate it after gaussian elimination\n",
+    "\n",
+    "```\n",
+    "Q1, R1 = np.linalg.qr(M1)\n",
+    "            # Keep only the linearly independent columns\n",
+    "            Q1 = Q1[:, :np.linalg.matrix_rank(M1, hermitian=True)]\n",
+    "            \n",
+    "            Q2, R2 = np.linalg.qr(M2)\n",
+    "            Q2 = Q2[:, :np.linalg.matrix_rank(M2, hermitian=True)]\n",
+    "            \n",
+    "            # Compute the minimal angle between subspaces\n",
+    "            # using the maximum absolute inner product of basis vectors\n",
+    "            max_inner_product = np.max(np.abs(Q1.T @ Q2))\n",
+    "            min_angle = np.arccos(max_inner_product)\n",
+    "            \n",
+    "            return float(min_angle)\n",
+    "```\n",
+    "above is the older QR decomposition approach similar in the generation function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,81 +325,39 @@
     "        if np.any(np.isnan(M1)) or np.any(np.isnan(M2)) or \\\n",
     "           np.any(np.isinf(M1)) or np.any(np.isinf(M2)):\n",
     "            return -1000\n",
+    "        \n",
+    "         # Find linearly independent columns for M1 using Gaussian elimination\n",
+    "        Q1 = np.zeros_like(M1)\n",
+    "        rank = 0\n",
+    "        for i in range(M1.shape[1]):\n",
+    "            col = M1[:, i]\n",
+    "            if np.allclose(col, np.zeros_like(col)) or np.all(np.isclose(col, col[0])):\n",
+    "                continue\n",
+    "            Q1[:, rank] = col / np.linalg.norm(col)\n",
+    "            rank += 1\n",
+    "        Q1 = Q1[:, :rank]\n",
+    "        \n",
+    "        # Find linearly independent columns for M2 using Gaussian elimination\n",
+    "        Q2 = np.zeros_like(M2)\n",
+    "        rank = 0\n",
+    "        for i in range(M2.shape[1]):\n",
+    "            col = M2[:, i]\n",
+    "            if np.allclose(col, np.zeros_like(col)) or np.all(np.isclose(col, col[0])):\n",
+    "                continue\n",
+    "            Q2[:, rank] = col / np.linalg.norm(col)\n",
+    "            rank += 1\n",
+    "        Q2 = Q2[:, :rank]\n",
+    "        \n",
     "\n",
-    "        # Find orthonormal basis for M1 using QR decomposition\n",
-    "        try:\n",
-    "            Q1, R1 = np.linalg.qr(M1)\n",
-    "            # Determine rank using SVD\n",
-    "            _, S1, _ = np.linalg.svd(M1, full_matrices=False)\n",
-    "            rank1 = np.sum(S1 > 1e-10)\n",
-    "            if rank1 == 0:\n",
-    "                return -1000\n",
-    "            Q1 = Q1[:, :rank1]\n",
-    "\n",
-    "            # Find orthonormal basis for M2\n",
-    "            Q2, R2 = np.linalg.qr(M2)\n",
-    "            _, S2, _ = np.linalg.svd(M2, full_matrices=False)\n",
-    "            rank2 = np.sum(S2 > 1e-10)\n",
-    "            if rank2 == 0:\n",
-    "                return -1000\n",
-    "            Q2 = Q2[:, :rank2]\n",
+    "        # Compute the minimal angle between subspaces\n",
+    "        # using the maximum absolute inner product of basis vectors\n",
+    "        max_inner_product = np.max(np.abs(Q1.T @ Q2))\n",
+    "        min_angle = np.arccos(max_inner_product)\n",
     "            \n",
-    "            # Compute SVD of Q1^T @ Q2\n",
-    "            U, S, Vh = np.linalg.svd(Q1.T @ Q2, full_matrices=False)\n",
-    "            \n",
-    "            # Compute the principal angles from the singular values\n",
-    "            angles = np.arccos(np.clip(S, -1.0, 1.0))\n",
-    "            \n",
-    "            # Return the smallest angle\n",
-    "            return float(np.min(angles))\n",
-    "            \n",
-    "        except np.linalg.LinAlgError:\n",
-    "            return -1000\n",
+    "        return float(min_angle)\n",
     "            \n",
     "    except Exception:\n",
     "        return -1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 384,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# All these cases will run without crashing\n",
-    "test_cases = [\n",
-    "    # Normal case\n",
-    "    (4, 2, 2, 50, 50, np.pi/4),\n",
-    "    # Impossible geometry\n",
-    "    #(3, 2, 2, 50, 50, np.pi/4),\n",
-    "    # Bad inputs\n",
-    "    #(-1, 2, 2, 50, 50, 0),\n",
-    "    #('a', 2, 2, 50, 50, 0),\n",
-    "    #(4, 5, 2, 50, 50, 0),\n",
-    "    #(4, 2, 2, 50, 50, 2*np.pi)\n",
-    "]\n",
-    "\n",
-    "for args in test_cases:\n",
-    "    M1, M2 = GenerateSubspacesMin(*args)\n",
-    "    angle = np.degrees(FindMinimalAngles(M1, M2))\n",
-    "    # Will either get valid results or appropriate error values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 385,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "47.534391445596206\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(angle)"
    ]
   }
  ],
