bonus exception crash changed

--- a/aufgabe/SVD_2738938.ipynb
+++ b/aufgabe/SVD_2738938.ipynb
@@ -15543,7 +15543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "id": "Ov-U1xUPlDh5"
    },
@@ -15574,7 +15574,7 @@
     "    '''\n",
     "    # Ensure T1num and T2num have the same length (equal number of letters)\n",
     "    if len(T1num) != len(T2num):\n",
-    "        raise ValueError(\"T1 and T2 must have the same number of letters.\")\n",
+    "        print(\"T1 and T2 must have the same number of letters. Results may be incorrect.\")\n",
     "\n",
     "    # Ensure Nd is sufficient for orthogonal planes\n",
     "    if Nd < 4:\n",
